# startup-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml  render.yaml
.github/workflows/: batch.yml  ci.yml  integration-status.yml
api/: auth.py  deps.py  llm_config.py  main.py  matching_view.py  repos.py  schemas.py
api/routes/: cv.py  llm_config.py  preferences.py  profile.py  rate.py  results.py  run.py  tracking.py
data/: companies.json  preferences.yaml
docs/: DEPLOY.md  integration-status.md
docs/plans/: 2026-06-12-phase-0-1-spike-and-skeleton.md  2026-06-12-phase-2-ingestion.md  2026-06-12-phase-3a-matching-no-llm.md  2026-06-12-phase-3b-llm-ranker.md  2026-06-19-local-web-app.md  2026-06-19-smart-llm-matching.md  2026-06-19-user-preferences-phase1.md  2026-06-20-applicant-profile.md  2026-06-20-comeet-descriptions.md  2026-06-20-cv-prefs-autofill.md  2026-06-20-ui-api-key.md  2026-06-21-matching-rerank-scoring.md
docs/specs/: 2026-06-12-startup-job-agent-design.md  2026-06-19-local-web-app-design.md  2026-06-19-per-user-preferences-design.md  2026-06-19-smart-llm-matching-design.md  2026-06-20-applicant-profile-design.md  2026-06-20-comeet-descriptions-design.md  2026-06-20-cv-prefs-autofill-design.md  2026-06-20-ui-api-key-design.md  2026-06-21-cloud-phase1-foundation-design.md  2026-06-21-goozali-source-design.md  2026-06-21-job-card-redesign-design.md  2026-06-21-matching-rerank-scoring-redesign.md
frontend/: package-lock.json
frontend/src/: App.css  App.tsx  index.css
scripts/: build_company_seed.py  harvest_comeet_tokens.py
spike/: build_seed.py  comeet_poc.md  comeet_poc.py  dedup_stats.md  detection_pass2.md  fetch_ats.py  fetch_snc.py  israeli_companies_spike_report.md  report.md  unknown_categorization.md
spike/fixtures/: ashby_drata.json  ashby_linear.json  ashby_orca.json  ashby_pinecone.json  ashby_wiz.json  comeet_BLOCKED.json  comeet_aqua.json  comeet_careers_snippet.html  comeet_hosted_page.html  comeet_tokens.json  companies_recruiting.json  companies_recruiting_v2.json  companies_seed.json  greenhouse_atbay.json  greenhouse_fireblocks.json  greenhouse_gongio.json  greenhouse_melio.json  greenhouse_riskified.json  lever_anyroad.json  lever_biocatch.json  smartrecruiters_fireblocks.json  smartrecruiters_gong.json  snc_probe.json  (+1 more)
tests/: conftest.py  test_cli.py
tmp/: apply_linkedin.py  reclaim_57.py  reclaim_keepers.json
(+155 files in other folders)
