[project]
name = "startup-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nathanielsade", email = "netanelsbt@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "structlog>=26.1.0",
    "typer>=0.26.7",
]

[project.scripts]
startup-agent = "startup_agent.cli:app"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]
