[project]
name = "startup-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nathanielsade", email = "netanelsbt@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.109.1",
    "fastapi>=0.137.2",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "openai>=2.43.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "pypdf>=6.13.2",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.5.1",
    "structlog>=26.1.0",
    "typer>=0.26.7",
    "uvicorn>=0.49.0",
]

[project.scripts]
startup-agent = "startup_agent.cli:app"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "playwright>=1.60.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]
